Fixed avatar overlapping priority icon in large view

--- a/src/styles.less
+++ b/src/styles.less
@@ -41,7 +41,14 @@
 		}
 	}
 
-	// Issue sidebar open
+	// Large view
+	&.ghx-band-3 {
+		.ghx-issue.ghx-has-avatar .ghx-flags {
+			top: 44px;
+		}
+	}
+
+	// Small view / issue sidebar open
 	&.ghx-band-1 {
 		.ghx-issue {
 			.ghx-issue-fields {
